ADD_EXECUTABLE(otbDataObjectWrapperTest otbDataObjectWrapperTest.cxx)
TARGET_LINK_LIBRARIES(otbDataObjectWrapperTest OTBMonteverdiCommon OTBIO)
ADD_TEST(coTuDataObjectWrapperTest otbDataObjectWrapperTest)

ADD_EXECUTABLE(otbDataDescriptorTest otbDataDescriptorTest.cxx)
TARGET_LINK_LIBRARIES(otbDataDescriptorTest OTBMonteverdiCommon OTBIO)
ADD_TEST(coTuDataDescriptorTest otbDataDescriptorTest)

ADD_EXECUTABLE(otbInputDataDescriptorTest otbInputDataDescriptorTest.cxx)
TARGET_LINK_LIBRARIES(otbInputDataDescriptorTest OTBMonteverdiCommon OTBIO)
ADD_TEST(coTuInputDataDescriptorTest otbInputDataDescriptorTest)

ADD_EXECUTABLE(otbOutputDataDescriptorTest otbOutputDataDescriptorTest.cxx)
TARGET_LINK_LIBRARIES(otbOutputDataDescriptorTest OTBMonteverdiCommon OTBIO)
ADD_TEST(coTuOutputDataDescriptorTest otbOutputDataDescriptorTest)

ADD_EXECUTABLE(otbTypeManagerTest otbTypeManagerTest.cxx)
TARGET_LINK_LIBRARIES(otbTypeManagerTest OTBMonteverdiCommon OTBIO)
ADD_TEST(coTuTypeManagerTest otbTypeManagerTest)

ADD_EXECUTABLE(otbModuleTest otbModuleTest.cxx)
TARGET_LINK_LIBRARIES(otbModuleTest OTBMonteverdiCommon OTBIO)
ADD_TEST(coTuModuleTest otbModuleTest)

